--- a/src/style.css
+++ b/src/style.css
@@ -54,6 +54,11 @@ nav ul li {
 }
 
 main {
+  border-top: 1px solid #a8a8a8;
+  border-bottom: 1px solid #a8a8a8;
+  background-color: rgba(180, 180, 180, 0.25);
+  padding-top: 80px;
+  padding-bottom: 150px;
   text-align: center;
   margin-bottom: 100px;
   margin-top: 200px;
@@ -62,15 +67,18 @@ main {
 #rdy {
   font-size: 4rem;
   margin: 30px;
-  margin-bottom: 20px;
+  margin-bottom: 100px;
   margin-top: 75px;
 }
 
 #rdy-btn {
   font-size: 35px;
   border-radius: 12px;
+  background-color: black;
+  color: whitesmoke;
   border: 1px solid #cecece;
   width: 40%;
+  height: 80px;
   max-width: 180px;
   cursor: pointer;
   margin: 0;
@@ -78,6 +86,7 @@ main {
 
 #rdy-btn:hover {
   background-color: #cecece;
+  color: black;
 }
 
 footer {
